kustomize/30-longhorn/local/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  labels:
    app.kubernetes.io/instance: 30-longhorn
spec:
  rules:
  - host: longhorn.local
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
